src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ADvendio__DartUserName__c</fullName>
        <description>Username for the DART AdServer. Used for setting Salesperson and Primary Trafficker for a DART order.</description>
        <inlineHelpText>Username for the DART AdServer. Used for setting Salesperson and Primary Trafficker for a DART order.</inlineHelpText>
        <label>DART User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__complimentary_close__c</fullName>
        <label>complimentary close</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kind regards</fullName>
                </value>
                <value>
                    <fullName>best regards</fullName>
                </value>
                <value>
                    <fullName>regards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__scanned_Sign__c</fullName>
        <label>scanned Sign</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_Sandboxes__c</fullName>
        <description>Hier können komma-separiert Sandboxnamen/-präfixe eingetragen werden. Bei der Erstellung einer darauf matchenden Sandbox wird für diesen User automatisch die Nachbearbeitung aus Klasse Lcm_Sandbox_Setup ausgelöst.
Ticket 4349</description>
        <inlineHelpText>Hier können komma-separiert Sandboxnamen/-präfixe eingetragen werden. Bei der Erstellung einer darauf matchenden Sandbox wird für diesen User automatisch die Nachbearbeitung aus Klasse Lcm_Sandbox_Setup ausgelöst.</inlineHelpText>
        <label>Sandboxes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1Firmensitz_laut_HRB__c</fullName>
        <description>Hält den Firmensitz des Unternehmens um diese in die Fusszeile von Email zu bringen.</description>
        <inlineHelpText>Hält den Firmensitz des Unternehmens um diese in die Fusszeile von Email zu bringen.</inlineHelpText>
        <label>Firmensitz laut HRB</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_EmpLink__c</fullName>
        <formula>IF( ISBLANK(P7S1_Emp__c),
&apos;&apos;,
HYPERLINK(&apos;/&apos; +  P7S1_Emp__c ,  FirstName + &apos; &apos; + LastName)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mitarbeiter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Emp__c</fullName>
        <label>Mitarbeiter-Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_Geschaeftsfuehrer__c</fullName>
        <description>Hält die gültigen Geschäftsführer für die Fusszeile einer Email.</description>
        <inlineHelpText>Hält die gültigen Geschäftsführer für die Fusszeile einer Email.</inlineHelpText>
        <label>Geschäftsführer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_HRB__c</fullName>
        <description>Hält die Handelsregisternummer für die Fusszeile einer Email.</description>
        <inlineHelpText>Hält die Handelsregisternummer für die Fusszeile einer Email.</inlineHelpText>
        <label>HRB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Has_SE_Role__c</fullName>
        <description>Alle Rollen, die NICHT in Sales Excellence involviert sind, bekommen keinen Haken, alle anderen bekommen den Haken gesetzt</description>
        <formula>IF ( 
OR ( 
ISBLANK ( UserRoleId ) , 
CASE ( UserRole.DeveloperName , 
&apos;Aer&apos; , 1 , 
&apos;App_ExternalUsers&apos; , 1 , 
&apos;App_TechnicalUsers&apos; , 1 , 
&apos;MA&apos; , 0 , 
&apos;MA_BusinessLeadSupport&apos; , 0 , 
&apos;MA_BusinessUnitHeads&apos; , 0 , 
&apos;P7S1_Applications&apos; , 0 , 
&apos;SGN&apos; , 1 , 
&apos;SomAt&apos; , 1 , 
&apos;SomDe&apos; , 1 , 
&apos;Ven&apos; , 0 , 
&apos;Ven_Staff&apos; , 0 , 
0 ) = 1 
) , 
false , 
true 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt an, ob der User über seine Rolle Teil von Sales Excellence ist</inlineHelpText>
        <label>Has SE Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Host__c</fullName>
        <description>liefert den Salesforce Host in Kleinbuchstaben.
Wird durch Formel aus konstanter Standard URL (API-URL) extrahiert.</description>
        <formula>IF( P7S1_IsSandbox__c , 

LOWER ( 
MID ( 
$Api.Partner_Server_URL_300, 
18, 
FIND(&apos;.&apos;, $Api.Partner_Server_URL_300 , 18) - 18 
) 
), 

&apos;eu4&apos;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salesforce Host (eu.., cs8, cs16...) in Kleinbuchstaben</inlineHelpText>
        <label>P7S1_Host</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Hilfefeld für die Migration der Games-Daten</description>
        <inlineHelpText>Hilfefeld für die Migration der Games-Daten</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IsBusinessUser__c</fullName>
        <description>Kennzeichnet User, die nicht Administrator oder Schnittstellenuser sind</description>
        <formula>IF (
  OR (
    ProfileId = $Label.ProfileIdAdmin ,
    ProfileId = &apos;00eD0000001QlQ4&apos; ,
    Id = &apos;005D0000002MKwN&apos;
  ) ,
  false ,
  true
)</formula>
        <inlineHelpText>Kennzeichnet User, die nicht Administrator oder Schnittstellenuser sind</inlineHelpText>
        <label>Is Business User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IsSandbox__c</fullName>
        <description>Gibt an, ob es sich um eine Salesforce Sandbox handelt</description>
        <formula>$Organization.Id != &apos;00D20000000&apos; + &apos;7Imv&apos; 

/*
OrgId der Produktion wird bewusst zusammengesetzt, um zu verhindern,
dass ein Sandbox Refresh diese OrgId anpasst auf die OrgId der Sandbox
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gibt an, ob es sich um eine Salesforce Sandbox handelt</inlineHelpText>
        <label>P7S1_IsSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_MigrationInsertUpdate__c</fullName>
        <description>P7S1_MigrationInsertUpdate__c</description>
        <inlineHelpText>P7S1_MigrationInsertUpdate__c</inlineHelpText>
        <label>P7S1_MigrationInsertUpdate__c</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_MigrationsComment__c</fullName>
        <description>P7S1_MigrationsComment__c</description>
        <inlineHelpText>P7S1_MigrationsComment__c</inlineHelpText>
        <label>P7S1_MigrationsComment__c</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Projects__c</fullName>
        <description>Benutzer ist Teilnehmer von Entwicklungsprojekten (Projektteam, Tester, Fachbereich). Dient zur Steuerung von Einstellungen in Testumgebungen</description>
        <inlineHelpText>Benutzer ist Teilnehmer von Entwicklungsprojekten (Projektteam, Tester, Fachbereich). Dient zur Steuerung von Einstellungen in Testumgebungen</inlineHelpText>
        <label>Projektmitglied</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AdC_CoreTeam</fullName>
                </value>
                <value>
                    <fullName>AdC_Fachbereich</fullName>
                </value>
                <value>
                    <fullName>CRMSALES_CoreTeam</fullName>
                </value>
                <value>
                    <fullName>CRMSALES_Fachbereich</fullName>
                </value>
                <value>
                    <fullName>SalesExcellence_CoreTeam</fullName>
                </value>
                <value>
                    <fullName>SalesExcellence_Fachbereich</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Schulungsdatum__c</fullName>
        <description>zur Steuerung, welche User für Schulung aktiviert wurden.
Datum der Schulung wird eingetragen
Das Feld wird nur in Sandbox VP/VP2 benötigt / gefüllt.

Feld kann nach Abschluss der CRMSALES Schulungen gelöscht werden.</description>
        <inlineHelpText>zur Steuerung, welche User für Schulung aktiviert wurden.
Datum der Schulung wird eingetragen
Das Feld wird nur in Sandbox VP/VP2 benötigt / gefüllt.</inlineHelpText>
        <label>Schulungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_ShowTestuserLinks__c</fullName>
        <description>User ist im CoreTeam eines Projekts und es handelt sich um eine Sandbox</description>
        <formula>Profile.Id = $Label.ProfileIdAdmin
||

(AND (
  OR (
    INCLUDES( P7S1_Projects__c , &apos;AdC_CoreTeam&apos;) , 
    INCLUDES( P7S1_Projects__c , &apos;CRMSALES_CoreTeam&apos;) , 
    INCLUDES( P7S1_Projects__c , &apos;SalesExcellence_CoreTeam&apos;)
  ),
     P7S1_IsSandbox__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>User ist im CoreTeam eines Projekts und es handelt sich um eine Sandbox</inlineHelpText>
        <label>Show Testuser Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <description>Steuert das Hüllenmodel (Sphere) für alle Unternehmensbereiche welche die zentrale sf.com-Instance nutzen - steuert und Datentechnisch voneinander trennt.</description>
        <inlineHelpText>Steuert das Hüllenmodel (Sphere) für alle Unternehmensbereiche welche die zentrale sf.com-Instance nutzen - steuert und Datentechnisch voneinander trennt.</inlineHelpText>
        <label>P7S1_Sphere</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aer</fullName>
                    <color>#666666</color>
                    <label>Aer</label>
                </value>
                <value>
                    <fullName>Sgn</fullName>
                    <color>#BBBBBB</color>
                    <label>Sgn</label>
                </value>
                <value>
                    <fullName>SomAt</fullName>
                    <color>#CC33CC</color>
                    <label>SomAt</label>
                </value>
                <value>
                    <fullName>SomDe</fullName>
                    <color>#FF0000</color>
                    <label>SomDe</label>
                </value>
                <value>
                    <fullName>Ven</fullName>
                    <color>#333399</color>
                    <label>Ven</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Steuernummer__c</fullName>
        <description>Hält die Steuernummer des Unternehmens um diese in die Fusszeile von Email zu bringen.</description>
        <inlineHelpText>Hält die Steuernummer des Unternehmens um diese in die Fusszeile von Email zu bringen.</inlineHelpText>
        <label>Steuernummer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UmsatzsteuerID_Nr__c</fullName>
        <description>Hält die Umsatzsteuer-Identnummer des Unternehmens um diese in die Fusszeile von Email zu bringen.</description>
        <inlineHelpText>Hält die Umsatzsteuer-Identnummer des Unternehmens um diese in die Fusszeile von Email zu bringen.</inlineHelpText>
        <label>UmsatzsteuerID-Nr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Unit__c</fullName>
        <description>Enthält die Information welcher Unit der User zugeordnet ist</description>
        <inlineHelpText>Enthält die Information welcher Unit der User zugeordnet ist</inlineHelpText>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UserId__c</fullName>
        <description>Active Directory Benutzername
Windows Benutzername</description>
        <inlineHelpText>Bitte das Windows Login = Active Directory Benutzername eintragen (Format: abc0000z)</inlineHelpText>
        <label>P7S1_UserId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UserType__c</fullName>
        <description>Typ des Benutzers, zur Unterscheidung von &quot;echten&quot; Benutzers und den unterschiedlichen System-Benutzern (Test, Import, Interface)</description>
        <inlineHelpText>Typ des Benutzers, zur Unterscheidung von &quot;echten&quot; Benutzers und den unterschiedlichen System-Benutzern (Test, Import, Interface)</inlineHelpText>
        <label>P7S1_UserType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User_internal</fullName>
                    <color>#009900</color>
                    <label>User_internal</label>
                </value>
                <value>
                    <fullName>User_external</fullName>
                    <color>#78C953</color>
                    <label>User_external</label>
                </value>
                <value>
                    <fullName>Guest_Chatter</fullName>
                    <color>#3366FF</color>
                    <label>Guest_Chatter</label>
                </value>
                <value>
                    <fullName>System_Interface</fullName>
                    <color>#990000</color>
                    <label>System_Interface</label>
                </value>
                <value>
                    <fullName>System_Import</fullName>
                    <color>#CC0000</color>
                    <label>System_Import</label>
                </value>
                <value>
                    <fullName>System_Dev</fullName>
                    <color>#FF0000</color>
                    <label>System_Dev</label>
                </value>
                <value>
                    <fullName>System_Tester</fullName>
                    <color>#FF6666</color>
                    <label>System_Tester</label>
                </value>
                <value>
                    <fullName>System_Reuse</fullName>
                    <color>#FF9966</color>
                    <label>System_Reuse</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_UsernameEmailDifferent__c</fullName>
        <description>Wenn Checkbox True dann weichen E-Mail und Benutzername voneinander ab.</description>
        <formula>IF(Username  &lt;&gt;  Email ,true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wenn Checkbox True dann weichen E-Mail und Benutzername voneinander ab.</inlineHelpText>
        <label>Benutzername ungleich E-Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProRexFunktionsIds__c</fullName>
        <description>ProRex FunktionsIDs des Mitarbeiters</description>
        <inlineHelpText>ProRex FunktionsIDs des Mitarbeiters</inlineHelpText>
        <label>ProRex-Funktions-Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProRexId__c</fullName>
        <description>eindeutige Verkäufer-ID. Muss bei SomTv-Verkäufern gefüllt werden. Manuell ab 2000.
(ehemals ProRex PersonenID des Mitarbeiters)</description>
        <externalId>true</externalId>
        <inlineHelpText>eindeutige Verkäufer-ID. Muss bei SomTv-Verkäufern gefüllt werden. Manuell ab 2000.
(ehemals ProRex PersonenID des Mitarbeiters)</inlineHelpText>
        <label>Verkäufer-Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProRex_Funktions_Id__c</fullName>
        <description>ProRex FunktionsID des Mitarbeiters</description>
        <inlineHelpText>ProRex FunktionsID des Mitarbeiters</inlineHelpText>
        <label>ProRex-Funktions-Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_CampaignItemForwarderInactive__c</fullName>
        <formula>$Permission.SomDig_CampaignItemForwarderInactive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Item Forwarder inaktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_IsTeamLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnet einen User als PAM TeamLead. Siehe Ticket 4864.</description>
        <inlineHelpText>Kennzeichnet einen User als PAM TeamLead.</inlineHelpText>
        <label>Is TeamLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_SalesTeam__c</fullName>
        <description>Hilfsfeld für die SevenOne Media Digital Sales, wird primär für Reportzwecken genutzt (Datensätze wie Oppties etc. werden in den Reports u.a. nach diesen Werten gruppiert). Folgende Infos beinhaltet das Feld: Bereich (Digital), Abteilung (Sales), Unterabteilung (RTA/ECC) und Location; nicht über stringent, Anforderung Fachabteilung. Nachfolger vom Feld 
Vertriebs-Team (VB_Location__c)</description>
        <inlineHelpText>Hilfsfeld für die SOM Digital Sales, wird primär für Reportzwecken genutzt (Datensätze wie Oppties etc. werden in den Reports u.a. nach diesen Werten gruppiert). Bitte bei jedem Digital-Vertriebler auswählen. Nachfolger-Feld von Vertriebs-Team/Location</inlineHelpText>
        <label>Vertriebsteam Digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vertrieb Berlin</fullName>
                </value>
                <value>
                    <fullName>Vertrieb Düsseldorf</fullName>
                </value>
                <value>
                    <fullName>Vertrieb Frankfurt</fullName>
                </value>
                <value>
                    <fullName>Vertrieb Hamburg</fullName>
                </value>
                <value>
                    <fullName>Vertrieb München</fullName>
                </value>
                <value>
                    <fullName>Vertrieb ECC</fullName>
                </value>
                <value>
                    <fullName>Vertrieb RTA</fullName>
                </value>
                <value>
                    <fullName>Vertrieb Steuerung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_BetreuerGueltigBis__c</fullName>
        <label>SomTv Betreuer Gültig Bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_BetreuerGueltigVon__c</fullName>
        <label>SomTv Betreuer Gültig Von</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_Location_Id__c</fullName>
        <description>Wird NUR bei Profil SomTv_Sales benötigt
SomDe=3776, SomAt: 22584</description>
        <inlineHelpText>Wird NUR bei Profil SomTv_Sales benötigt
SomDe=3776, SomAt: 22584</inlineHelpText>
        <label>Verkaufsbüro ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3779</fullName>
                </value>
                <value>
                    <fullName>22584</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_SalesTeam_Id__c</fullName>
        <description>Zeigt die ID zur Verkaufsgruppe an. Diese ID muss vom Fachbereich geliefert werden. Wird aber NUR bei Profil SomTv_Sales benötigt</description>
        <inlineHelpText>Zeigt die ID zur Verkaufsgruppe an. Diese ID muss vom Fachbereich geliefert werden. Wird aber NUR bei Profil SomTv_Sales benötigt</inlineHelpText>
        <label>Verkaufsgruppe ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_SalesTeam__c</fullName>
        <description>Verkaufsgruppe zum zugehörigen Verkaufsbüro. Diese muss vom Fachbereich geliefert werden. Wird aber NUR bei Profil SomTv_Sales benötigt</description>
        <inlineHelpText>Verkaufsgruppe zum zugehörigen Verkaufsbüro. Diese muss vom Fachbereich geliefert werden. Wird aber NUR bei Profil SomTv_Sales benötigt</inlineHelpText>
        <label>Verkaufsgruppe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ENTERTAINMENT/ECC</fullName>
                </value>
                <value>
                    <fullName>GESCHÄFTSFÜHRUNG</fullName>
                </value>
                <value>
                    <fullName>NEW BUSINESS</fullName>
                </value>
                <value>
                    <fullName>SALES</fullName>
                </value>
                <value>
                    <fullName>SALES COMMERCE</fullName>
                </value>
                <value>
                    <fullName>SALES INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>SALES PARTNER</fullName>
                </value>
                <value>
                    <fullName>SALES POTENTIAL</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM BÖTTCHER</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM HAUPT</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM HIRSCHMANN</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM HORSMANN</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM HUSMANN</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM JÜRGENS</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM KLABUNDT</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM MAYER</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM MEYER-SCHÖNBERG</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM SCHLIMGEN</fullName>
                </value>
                <value>
                    <fullName>SALESTEAM SCHLIMGEN/WEITEKAMP/SCHEPERS</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM SEEMANN</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM VOLLSTUBEN</fullName>
                </value>
                <value>
                    <fullName>SALES TEAM ZWINGMANN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_ID__c</fullName>
        <label>Team ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VB_Location__c</fullName>
        <description>an welchem Standort ist der Mitarbeiter ansässig</description>
        <inlineHelpText>an welchem Standort ist der Mitarbeiter ansässig</inlineHelpText>
        <label>Vertriebs-Standort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Düsseldorf</fullName>
                </value>
                <value>
                    <fullName>Frankfurt</fullName>
                </value>
                <value>
                    <fullName>Hamburg</fullName>
                </value>
                <value>
                    <fullName>München</fullName>
                </value>
                <value>
                    <fullName>Wien</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_PipeCheckedLastWeek__c</fullName>
        <description>Checkt, ob das Feld Ven_PipelineChecked__c in der letzten Woche liegt (Pipeline wurde vom Investment Manager bearbeitet). Dieses Feld dient zu Reporting Zwecken, um zu überprüfen, ob die Pipeline Daten der Investment Manager aktuell sind.</description>
        <formula>IF( DATEVALUE (Ven_PipelineChecked__c) &gt;  DATE( YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY())-7) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline checked last week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_PipelineChecked__c</fullName>
        <label>Pipeline checked</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AdFactory_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>adf</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AdFactory User</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Admins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>P7S1_Projects__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrator</value>
        </filters>
        <label>Admins</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Advendio_User</fullName>
        <columns>P7S1_Sphere__c</columns>
        <columns>P7S1_UserType__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>startsWith</operation>
            <value>Adven</value>
        </filters>
        <label>Advendio-User</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Aeria_Sgn</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Sphere__c</field>
            <operation>equals</operation>
            <value>Aer</value>
        </filters>
        <filters>
            <field>P7S1_Sphere__c</field>
            <operation>equals</operation>
            <value>Sgn</value>
        </filters>
        <label>Aeria Sgn</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AktiveBenutzer</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>P7S1_UserType__c</columns>
        <columns>P7S1_Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>P7S1_UsernameEmailDifferent__c</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Aktive Benutzer</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>AktiveBenutzerP4</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>P7S1_UserType__c</columns>
        <columns>P7S1_Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>P7S1_UsernameEmailDifferent__c</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>P7S1_Unit__c</field>
            <operation>equals</operation>
            <value>Puls4</value>
        </filters>
        <label>Aktive Benutzer Puls4</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>AktiveNichtPersBenutzer</fullName>
        <booleanFilter>1 AND (2 OR 3) and 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>P7S1_UserType__c</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>P7S1_UserType__c</field>
            <operation>equals</operation>
            <value>System_Interface,System_Import,System_Tester,System_Reuse</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>vb,potential,verkäufer,ungültig</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>tester</value>
        </filters>
        <label>Aktive nicht-personalisierte User</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>AktiveSEBenutzer</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>P7S1_UserType__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>P7S1_UsernameEmailDifferent__c</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>P7S1_Has_SE_Role__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Aktive SE Benutzer</label>
        <language>de</language>
    </listViews>
</CustomObject>